--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "Shivangi",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^0.11.6",
     "jquery": "^3.3.1"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-polyfill": "~6.26.0",
+    "babel-preset-env": "~1.6.1",
+    "clang-format": "~1.2.2",
+    "parcel-bundler": "~1.6.2"
   }
 }
