--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^0.11.6",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "vega-embed": "~3.0.0"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "~6.23.0",
